@@ -7,14 +7,8 @@
  * REVISIONS:
  *   CSH 01/08-2000 Created
  */
-#include <roscfg.h>
-#include <tcpip.h>
-#include <arp.h>
-#include <routines.h>
-#include <neighbor.h>
-#include <address.h>
-#include <pool.h>
-#include <lan.h>
+
+#include "precomp.h"
 
 
 PNDIS_PACKET PrepareARPPacket(
